# quorum-python-sdk

./: Makefile  README.md  buf.gen.yaml  pyproject.toml
examples/: claude_assistant.py  claudebot.py  dicebot.py
proto/quorum/v1/: auth.proto  chat.proto
quorum/: __init__.py
quorum/v1/: __init__.py  auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  chat_pb2.py  chat_pb2.pyi  chat_pb2_grpc.py
quorum_bot/: __init__.py  bot.py  client.py
